# omniHarness

./: .env.example  .gitignore  CONTRIBUTING.md  Install.md  LICENSE  Makefile  Plan.md  README.md  SECURITY.md  config.example.yaml  omni-harness.code-workspace
backend/: CLAUDE.md  CONTRIBUTING.md  README.md  debug.py  langgraph.json  pyproject.toml  ruff.toml
backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTH_TEST_DOCKER_GAP.md  AUTH_TEST_PLAN.md  AUTH_UPGRADE.md  AUTO_TITLE_GENERATION.md  CONFIGURATION.md  FILE_UPLOAD.md  GUARDRAILS.md  MCP_SERVER.md  MEMORY_IMPROVEMENTS_SUMMARY.md  MEMORY_SETTINGS_REVIEW.md  PATH_EXAMPLES.md  PLATFORM_ARCHITECTURE.md  README.md  SETUP.md  STREAMING.md  TITLE_GENERATION_IMPLEMENTATION.md  TODO.md  memory-settings-sample.json  middleware-execution-flow.md  plan_mode_usage.md  rfc-create-deerflow-agent.md  rfc-extract-shared-modules.md  rfc-grep-glob-tools.md  summarization.md  task_tool_improvements.md
backend/scripts/: migrate_user_isolation.py  test_composio_e2e.sh  trace_assembly.py
backend/tests/: conftest.py  test_acp_config.py  test_aio_sandbox.py  test_aio_sandbox_local_backend.py  test_aio_sandbox_provider.py  test_app_config_reload.py  test_artifacts_router.py  test_auth.py  test_auth_middleware.py  test_auth_type_system.py  test_channel_file_attachments.py  test_channels.py  test_check_script.py  test_checkpointer.py  test_checkpointer_none_fix.py  test_clarification_middleware.py  test_claude_provider_oauth_billing.py  test_claude_provider_prompt_caching.py  test_cli_auth_providers.py  test_client.py  (+147 more)
(+313 files in other folders)
